--- a/public/views/login.html
+++ b/public/views/login.html
@@ -6,21 +6,23 @@
 
 <body>
     <div class="container">
-        <div class="curtain">
+        <!-- <div class="curtain">
             <img src="../img/thecurtain.svg" z-index: 1>
-        </div>
+        </div> -->
 
         <div class="logo">
-            <img src="../img/logo.svg" z-index: 2>
+            <img src="../img/logo.svg">
         </div>
 
         <div class="login_container">
             <form>
                 <input name="email" type="text" placeholder="email@email.com">
                 <input name="password" type="password" placeholder="password">
-                <button>LOGIN</button>
+                <!-- <input id="rememberChkBox" type="checkbox"> -->
+                <div class="button_login">
+                    <button>→</button>
+                </div>   
             </form>
         </div>
-
     </div>
 </body>
