--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     <title>LOGIN PAGE</title>
 </head>
 
@@ -20,7 +21,7 @@
                 <input name="password" type="password" placeholder="password">
                 <!-- <input id="rememberChkBox" type="checkbox"> -->
                 <div class="button_login">
-                    <button>→</button>
+                    <button><i class="fas fa-arrow-right"></i></button>
                 </div>   
             </form>
         </div>
