--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -8,7 +8,16 @@
 <body>
     <div class="container1">
         <div class="menu">
+            <div class="logo2">
+                <img src="../img/logo.svg" 
+                style="float: left;
+                width: 25%;
+                height: 56%;
+                margin: 1%;">
+            </div>
+    
             <ul style="float:right">
+            
                 <li><a href="default.asp">Home</a></li>
                 <li><a href="default.asp">Search</a></li>
                 <li><a href="default.asp">Theatre</a></li>
