--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -11,15 +11,7 @@
     css/font-awesome.min.css">
 
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-        body {
-            font-family: Open sans,sans-serif;
-            background: #d3d6ea;
-        }
+       
     </style>
     
     <title>MainPage</title>
@@ -57,8 +49,8 @@
 
         <dvi class="main">
             <dvi class="col-4">
-                <h1>Paris</h1>
-                <p>zerxtcyvubinopopnbivucyxdctfvybunm,</p>
+                <h1>Sztuka</h1>
+                <p>Description</p>
                 <a href="#">Read more!</a>
             </dvi>
 
@@ -96,6 +88,7 @@
             startAt: 0,
             perView: 3
         }).mount()
+        
     </script>
 </body>
 
