--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -4,11 +4,9 @@
     
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/
-    glide.theme.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.min.css">
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/
-    css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
        
@@ -49,22 +47,21 @@
 
         <dvi class="main">
             <dvi class="col-4">
-                <h1>Sztuka</h1>
+                <h1 style="position: absolute;
+                            right: 47%;">Sztuka</h1>
                 <p>Description</p>
                 <a href="#">Read more!</a>
             </dvi>
 
             <dvi class="col-8">
                 <div class="glide">
-
                     <div class="glide__track" data-glide-el="track">
-                      <ul class="glide__slides">
+                        <ul class="glide__slides">
                         <li class="glide__slide"><img src="../img/example_image.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/example_image.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/example_image.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/example_image.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/example_image.svg" alt=""></li>
-                      </ul>
+                        <li class="glide__slide"><img src="../img/balladyna.svg" alt=""></li>
+                        <li class="glide__slide"><img src="../img/biesy.svg" alt=""></li>
+                        <li class="glide__slide"><img src="../img/cabaret.svg" alt=""></li>
+                        </ul>
                     </div>
 
                     <div class="glide__arrows" data-glide-el="controls">
@@ -75,8 +72,8 @@
                             <i class="fa fa-angle-right"></i>
                         </button>
                     </div>
-
-                  </div>
+                    
+                </div>        
             </dvi>        
         </dvi>
     </div>
