--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/register_style.css">
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     <title>RegisterPage</title>
 </head>
@@ -12,9 +12,13 @@
             <img src="../img/logo.svg">
         </div>
 
-        <div class="login_container">
+        <div class="register_container">
             <form>
-                <input name="name" type="text" placeholder="Jan">
+                <dive class="name">
+                    <div class="concret-name">Imię</dive>
+                    <input name="name" type="text" placeholder="Jan">
+                </div>
+                
                 <input name="surname" type="text" placeholder="Kowalski">
                 <input name="nick" type="text" placeholder="janek12345">
                 <input name="email" type="text" placeholder="email@email.com">
