--- a/public/views/register.html
+++ b/public/views/register.html
@@ -14,16 +14,36 @@
 
         <div class="register_container">
             <form>
-                <dive class="name">
-                    <div class="concret-name">Imię</dive>
+                <div class="name">
+                    <div class="concret-name">Imię</div>
                     <input name="name" type="text" placeholder="Jan">
                 </div>
+
+                <div class="surname">
+                    <div class="concret-surname">Nazwisko</dive>
+                    <input name="surname" type="text" placeholder="Kowalski">
+                </div>
                 
-                <input name="surname" type="text" placeholder="Kowalski">
-                <input name="nick" type="text" placeholder="janek12345">
-                <input name="email" type="text" placeholder="email@email.com">
-                <input name="password" type="password" placeholder="password">
-                <input name="re-password" type="password" placeholder="password">
+                <div class="login">
+                    <div class="concret-login">Login</dive>
+                    <input name="login" type="text" placeholder="janek12345">
+                </div>
+                
+                <div class="email">
+                    <div class="concret-email">Email</dive>
+                    <input name="email" type="text" placeholder="email@email.com">
+                </div>
+                
+                <div class="password">
+                    <div class="concret-password">Hasło</dive>
+                    <input name="password" type="password" placeholder="password">
+                </div>
+                
+                <div class="repassword">
+                    <div class="concret-repassword">Powtórz hasło</dive>
+                    <input name="repassword" type="password" placeholder="password">
+                </div>
+                
                 <!-- <input id="rememberChkBox" type="checkbox"> -->
                 <div class="button_login">
                     <button><i class="fas fa-arrow-right"></i></button>
