--- a/public/views/register.html
+++ b/public/views/register.html
@@ -20,27 +20,27 @@
                 </div>
 
                 <div class="surname">
-                    <div class="concret-surname">Nazwisko</dive>
+                    <div class="concret-surname">Nazwisko</div>
                     <input name="surname" type="text" placeholder="Kowalski">
                 </div>
                 
                 <div class="login">
-                    <div class="concret-login">Login</dive>
+                    <div class="concret-login">Login</div>
                     <input name="login" type="text" placeholder="janek12345">
                 </div>
                 
                 <div class="email">
-                    <div class="concret-email">Email</dive>
+                    <div class="concret-email">Email</div>
                     <input name="email" type="text" placeholder="email@email.com">
                 </div>
                 
                 <div class="password">
-                    <div class="concret-password">Hasło</dive>
+                    <div class="concret-password">Hasło</div>
                     <input name="password" type="password" placeholder="password">
                 </div>
                 
                 <div class="repassword">
-                    <div class="concret-repassword">Powtórz hasło</dive>
+                    <div class="concret-repassword">Powtórz hasło</div>
                     <input name="repassword" type="password" placeholder="password">
                 </div>
                 
