--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     <title>LOGIN PAGE</title>
 </head>
@@ -12,7 +12,7 @@
         </div> -->
 
         <div class="logo">
-            <img src="../img/logo.svg">
+            <img src="public/img/logo.svg">
         </div>
 
         <div class="login_container">
