--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/menu_style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
     
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     
@@ -21,30 +21,34 @@
 
     <div class="container1">
 
-        <div class="menu">
+        <nav>
+            <div class="menu">
 
-            <div class="logo2">
-
-                <img src="../img/logo.svg" 
-                style="float: left;
-                width: 25%;
-                height: 56%;
-                margin: 1%;">
-
-            </div>
-
+                <div class="logo2">
     
-            <ul style="float:right">
-            
-                <li><a href="default.asp">Home</a></li>
-                <li><a href="default.asp">Search</a></li>
-                <li><a href="default.asp">Theatre</a></li>
-                <li><a href="default.asp">Shop</a></li>
-                <li><a href="default.asp">Aboute</a></li>
-                <li><a href="default.asp">Let's start!</a></li>
-
-            </ul>
-        </div>
+                    <img src="public/img/logo.svg" 
+                    style="float: left;
+                    width: 25%;
+                    height: 56%;
+                    margin: 1%;">
+    
+                </div>
+    
+        
+                <ul style="float:right">
+                
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Theatre</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Aboute</a></li>
+                    <li><a href="#">Let's start!</a></li>
+    
+                </ul>
+            </div>
+           
+        </nav>
+       
 
         <dvi class="main">
             <dvi class="col-4">
@@ -58,10 +62,10 @@
                 <div class="glide">
                     <div class="glide__track" data-glide-el="track">
                         <ul class="glide__slides">
-                        <li class="glide__slide"><img src="../img/example_image.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/balladyna.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/biesy.svg" alt=""></li>
-                        <li class="glide__slide"><img src="../img/cabaret.svg" alt=""></li>
+                        <li class="glide__slide"><img src="public/img/example_image.svg" alt=""></li>
+                        <li class="glide__slide"><img src="public/img/balladyna.svg" alt=""></li>
+                        <li class="glide__slide"><img src="public/img/biesy.svg" alt=""></li>
+                        <li class="glide__slide"><img src="public/img/cabaret.svg" alt=""></li>
                         </ul>
                     </div>
 
