--- a/public/views/register_0.html
+++ b/public/views/register_0.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" type="text/css" href="../css/register_style.css">
+    <link rel="stylesheet" type="text/css" href="../css/menu_style.css">
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     <title>RegisterPage</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container1">
+        <nav>
+            <div class="menu">
+
+                <div class="logo2">
+
+                    <img src="public/img/logo.svg"
+                         style="float: left;
+                    width: 25%;
+                    height: 56%;
+                    margin: 1%;">
+
+                </div>
+
+                <ul style="float:right">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="#">Theatre</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Aboute</a></li>
+                    <li><a href="#">Let's start!</a></li>
+
+                </ul>
+            </div>
+        </nav>
 
         <div class="logo">
             <img src="../img/logo.svg">
