--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -1,20 +1,26 @@
 .menu {
     width: 100%;
-    border-bottom: 2px solid white;
+    border-bottom: 2em solid white;
 }
+
 li {
     float: left;
-  }
+}
   
-  li a {
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
+}
   
-  /* Change the link color to #111 (black) on hover */
-  li a:hover {
-    background-color: #111;
-  }
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+background-color: #111;
+}
+
+
+
+
+
