--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -3,6 +3,13 @@ body {
     overflow: hidden;
     font-family: sans-serif;
 }
+.container1 {
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    background: transparent radial-gradient(closest-side at 51% 100%, #800000 0%, #130000 100%) 0% 0% no-repeat padding-box;
+    display: flex;
+}
 
 input {
     padding: 0.5em 3em;
@@ -21,8 +28,20 @@ form {
 }
 
 .register_container {
-    position: absolute;
-    left: 50%;
-    
-
+    display: flex;
+    height: 50%;
+    align-items: center;
+    justify-content: center;
 }
+
+.page_location {
+    height: 10em;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+.page_location p {
+    margin: 0;
+}
+
