--- a/public/views/register_0.html
+++ b/public/views/register_0.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/register_style.css">
-    <link rel="stylesheet" type="text/css" href="../css/menu_style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/register_style.css">
+
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
-    <title>RegisterPage</title>
+    <title>register</title>
+
 </head>
 
 <body>
@@ -11,15 +14,11 @@
         <nav>
             <div class="menu">
 
-                <div class="logo2">
-
-                    <img src="public/img/logo.svg"
-                         style="float: left;
+                <img class="logo_menu" src="public/img/logo.svg"
+                     style="float: left;
                     width: 25%;
                     height: 56%;
                     margin: 1%;">
-
-                </div>
 
                 <ul style="float:right">
                     <li><a href="#">Home</a></li>
@@ -28,14 +27,11 @@
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">Aboute</a></li>
                     <li><a href="#">Let's start!</a></li>
-
                 </ul>
             </div>
         </nav>
 
-        <div class="logo">
-            <img src="../img/logo.svg">
-        </div>
+        <div class="page_location"><img src="public/img/pasek.svg"></div>
 
         <div class="register_container">
             <form>
@@ -48,32 +44,34 @@
                     <div class="concret-surname">Nazwisko</div>
                     <input name="surname" type="text" placeholder="Kowalski">
                 </div>
-                
+
                 <div class="login">
                     <div class="concret-login">Login</div>
                     <input name="login" type="text" placeholder="janek12345">
                 </div>
-                
+
                 <div class="email">
                     <div class="concret-email">Email</div>
                     <input name="email" type="text" placeholder="email@email.com">
                 </div>
-                
+
                 <div class="password">
                     <div class="concret-password">Hasło</div>
                     <input name="password" type="password" placeholder="password">
                 </div>
-                
+
                 <div class="repassword">
                     <div class="concret-repassword">Powtórz hasło</div>
                     <input name="repassword" type="password" placeholder="password">
                 </div>
-                
+
                 <!-- <input id="rememberChkBox" type="checkbox"> -->
                 <div class="button_login">
                     <button><i class="fas fa-arrow-right"></i></button>
-                </div>   
+                </div>
             </form>
         </div>
+
     </div>
+
 </body>
