--- a/public/views/register_0.html
+++ b/public/views/register_0.html
@@ -36,32 +36,32 @@
         <div class="register_container">
             <form>
                 <div class="name">
-                    <div class="concret-name">Imię</div>
+                    <p>Imię</p>
                     <input name="name" type="text" placeholder="Jan">
                 </div>
 
                 <div class="surname">
-                    <div class="concret-surname">Nazwisko</div>
+                    <p>Nazwisko</p>
                     <input name="surname" type="text" placeholder="Kowalski">
                 </div>
 
                 <div class="login">
-                    <div class="concret-login">Login</div>
+                    <p>Login</p>
                     <input name="login" type="text" placeholder="janek12345">
                 </div>
 
                 <div class="email">
-                    <div class="concret-email">Email</div>
+                    <p>Email</p>
                     <input name="email" type="text" placeholder="email@email.com">
                 </div>
 
                 <div class="password">
-                    <div class="concret-password">Hasło</div>
+                    <p>Hasło</p>
                     <input name="password" type="password" placeholder="password">
                 </div>
 
                 <div class="repassword">
-                    <div class="concret-repassword">Powtórz hasło</div>
+                    <p>Powtórz hasło</p>
                     <input name="repassword" type="password" placeholder="password">
                 </div>
 
