--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -29,7 +29,7 @@ form {
 
 .register_container {
     display: flex;
-    height: 50%;
+    height: 60%;
     align-items: center;
     justify-content: center;
 }
@@ -44,4 +44,10 @@ form {
 .page_location p {
     margin: 0;
 }
+p {
+    margin: 0;
+    color: #FFFFFF;
+}
+
+
 
