--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,7 +16,7 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background: transparent radial-gradient(closest-side at 51% 100%, #800000 0%, #130000 100%) 0% 0% no-repeat padding-box;
+    background: antiquewhite;
     display: flex;
     flex-direction: column;
     justify-content: center;
