--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -1,17 +1,28 @@
 .menu {
     width: 100%;
-    border-bottom: 2em solid white;
+    border-bottom: 1px solid white;
+}
+
+.menubtns li {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0 2em;
 }
 
 li {
     float: left;
+}
+
+ul {
+    height: 100%;
 }
   
 li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    /*padding: 14px 16px;*/
     text-decoration: none;
 }
   
