--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -7,9 +7,39 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background: transparent radial-gradient(closest-side at 51% 100%, #800000 0%, #130000 100%) 0% 0% no-repeat padding-box;
+    background: radial-gradient(circle, rgba(128,0,0,1) 20%, rgba(19,0,0,1) 60%);
     display: flex;
+    flex-direction: column;
 }
+.play {
+    background: #FFFFFF;
+}
+
+.play h1 {
+    text-align: center;
+}
+
+.play img {
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.rotate {
+    transform: rotateX(180deg) translateY(-20%);
+    filter: blur(6px);
+
+}
+
+.active .rotate {
+    background: yellow;
+}
+
+.glide__slide--active {
+    background: #2699FB;
+}
+
+
 
 input {
     padding: 0.5em 3em;
@@ -46,7 +76,7 @@ form {
 }
 p {
     margin: 0;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 
