--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,8 @@
 body {
     margin: 0;
+    background: radial-gradient(circle, rgba(128,0,0,1) 20%, rgba(19,0,0,1) 60%);
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     font-family: sans-serif;
 }
@@ -14,31 +17,25 @@ body {
 
 .container {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
-    background: white;
+    width: 100%;
+    height: 100%;
+    background-image: url("../img/thecurtain.svg");
+    background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.curtain {
-    z-index: 1;
-    position: absolute;
-}
-
-.logo {
-    margin: 0;
-    z-index: 2;
-    height: 50em;
-    padding: 8% 18%;
-    position: absolute;
-}
-
 .login_container {
-    z-index: 3;
-    height: 10em;
+    margin-top: 22%;
+    height: 100%;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 form {
