--- a/public/views/register.html
+++ b/public/views/register.html
@@ -5,31 +5,32 @@
     <link rel="stylesheet" type="text/css" href="public/css/register_style.css">
 
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
-    <title>register</title>
+    <title>Register</title>
 
 </head>
 
 <body>
     <div class="container1">
-        <nav>
-            <div class="menu">
-
-                <img class="logo_menu" src="public/img/logo.svg"
+        <nav class="menu">
+            <div class="logo2">
+                <img src="public/img/logo.svg"
                      style="float: left;
-                    width: 25%;
-                    height: 56%;
-                    margin: 1%;">
+            width: 25%;
+            height: 56%;
+            margin: 1%;">
 
-                <ul style="float:right">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Search</a></li>
-                    <li><a href="#">Theatre</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Aboute</a></li>
-                    <li><a href="#">Let's start!</a></li>
-                </ul>
             </div>
+
+            <ul class="menubtns" style="float:right">
+                <li><a href="http://localhost:8080/projects">Home</a></li>
+                <li><a href="#">Search</a></li>
+                <li><a href="#">Theatre</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Aboute</a></li>
+                <li><a href="http://localhost:8080/login">Let's start!</a></li>
+            </ul>
         </nav>
+
 
         <div class="page_location"><img src="public/img/pasek.svg"></div>
 
