--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -31,6 +31,13 @@ li a:hover {
 background-color: #111;
 }
 
+.logo2 img {
+    float: left;
+    width: 25%;
+    height: 56%;
+    margin: 1%;
+}
+
 
 
 
