--- a/public/views/projects.html
+++ b/public/views/projects.html
@@ -19,29 +19,23 @@
     <div class="container1">
         <nav class="menu">
             <div class="logo2">
-                <img src="public/img/logo.svg"
-                style="float: left;
-                width: 25%;
-                height: 56%;
-                margin: 1%;">
+                <img src="public/img/logo.svg">
 
             </div>
 
             <ul class="menubtns" style="float:right">
-                <li><a href="http://localhost:8080/projects">Home</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Theatre</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Aboute</a></li>
-                <li><a href="http://localhost:8080/login">Let's start!</a></li>
+                <li><a href="http://localhost:8080/projects">Strona Główna</a></li>
+                <li><a href="http://localhost:8080/search">Szukaj spektaklu</a></li>
+                <li><a href="http://localhost:8080/theatre">Teatry</a></li>
+                <li><a href="http://localhost:8080/aboute">O nas</a></li>
+                <li><a href="http://localhost:8080/login">Zaloguj się</a></li>
             </ul>
         </nav>
        
 
         <div class="main">
-            <div class="col-4">
-                <h1 style="position: relative; color: black">Sztuka</h1>
-            </div>
+
+            <div class="headline"><h>Repertuary</h></div>
 
             <div class="col-8">
                 <div class="glide">
