--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/register_style.css">
+    <title>Szukaj</title>
 </head>
-<body>
 
+
+<body>
+    <div class="container1">
+        <nav class="menu">
+            <div class="logo2">
+                <img src="public/img/logo.svg">
+            </div>
+
+            <ul class="menubtns" style="float:right">
+                <li><a href="http://localhost:8080/projects">Strona Główna</a></li>
+                <li><a href="http://localhost:8080/search">Szukaj spektaklu</a></li>
+                <li><a href="http://localhost:8080/theatre">Teatry</a></li>
+                <li><a href="http://localhost:8080/aboute">O nas</a></li>
+                <li><a href="http://localhost:8080/login">Zaloguj się</a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
+
+
 </html>
