--- a/public/views/search.html
+++ b/public/views/search.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="public/css/style.css">
     <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
     <link rel="stylesheet" type="text/css" href="public/css/register_style.css">
+
+    <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     <title>Szukaj</title>
 </head>
 
@@ -24,6 +26,11 @@
                 <li><a href="http://localhost:8080/login">Zaloguj się</a></li>
             </ul>
         </nav>
+
+        <div class="search_place">
+            <input name="search" type="text" placeholder="Szukaj">
+            <button type="button">Szukaj</button>
+        </div>
     </div>
 </body>
 
