--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,21 @@ body {
     align-items: center;
 }
 
+.button_search {
+    /* display: table; */
+    /* position: relative; */
+    width: 100%;
+    height: 6%;
+
+}
+
+.search_place {
+    display: flex;
+    height: 60%;
+    align-items: center;
+    justify-content: center;
+}
+
 .login_container {
     margin-top: 22%;
     height: 100%;
@@ -43,7 +58,7 @@ form {
     width: 40vw;
 }
 
-input {
+.login input {
     padding: 0.5em 3em;
     background: #FFFFFF 100% 50% no-repeat padding-box;
     border: 0.2em solid #2699FB;
