--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -1,5 +1,8 @@
 body {
     margin: 0;
+    background: radial-gradient(circle, rgba(128,0,0,1) 20%, rgba(19,0,0,1) 60%);
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     font-family: sans-serif;
 }
@@ -7,36 +10,8 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    background: radial-gradient(circle, rgba(128,0,0,1) 20%, rgba(19,0,0,1) 60%);
     display: flex;
     flex-direction: column;
-}
-.play {
-    background: #FFFFFF;
-}
-
-.play h1 {
-    text-align: center;
-}
-
-.play img {
-    height: 80%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.rotate {
-    transform: rotateX(180deg) translateY(-20%);
-    filter: blur(6px);
-
-}
-
-.active .rotate {
-    background: yellow;
-}
-
-.glide__slide--active {
-    background: #2699FB;
 }
 
 input {
