--- a/public/views/search.html
+++ b/public/views/search.html
@@ -4,7 +4,6 @@
 <head>
     <link rel="stylesheet" type="text/css" href="public/css/style.css">
     <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
-    <link rel="stylesheet" type="text/css" href="public/css/register_style.css">
 
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
     <title>Szukaj</title>
@@ -29,7 +28,7 @@
 
         <div class="search_place">
             <input name="search" type="text" placeholder="Szukaj">
-            <button type="button">Szukaj</button>
+<!--            <button type="button">Szukaj</button>-->
         </div>
     </div>
 </body>
