--- a/public/views/aboute.html
+++ b/public/views/aboute.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+<head>
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
+
+    <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
+    <title>Szukaj</title>
+</head>
+
+
+<body>
+<div class="container1">
+    <nav class="menu">
+        <div class="logo2">
+            <img src="public/img/logo.svg">
+        </div>
+
+        <ul class="menubtns" style="float:right">
+            <li><a href="http://localhost:8080/projects">Strona Główna</a></li>
+            <li><a href="http://localhost:8080/search">Szukaj spektaklu</a></li>
+            <li><a href="http://localhost:8080/theatre">Teatry</a></li>
+            <li><a href="http://localhost:8080/aboute">O nas</a></li>
+            <li><a href="http://localhost:8080/login">Zaloguj się</a></li>
+        </ul>
+    </nav>
+
+
+</div>
 </body>
+
+
 </html>
