--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style_backg.css">
     <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
 
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
@@ -27,7 +27,34 @@
 
         <div class="search_place">
             <input name="search" type="text" placeholder="Szukaj">
-<!--            <button type="button">Szukaj</button>-->
+            <button class="button button1">Szukaj</button>
+        </div>
+
+        <section class="projects">
+            <div id="project-1">
+                <img src="public/img/biesy.svg">
+                <div>
+                    <h2>title</h2>
+                </div>
+            </div>
+            <div id="project-2">
+                <img src="public/img/biesy.svg">
+                <div>
+                    <h2>title</h2>
+                </div>
+            </div><div id="project-3">
+            <img src="public/img/biesy.svg">
+            <div>
+                <h2>title</h2>
+            </div>
+        </div><div id="project-4">
+            <img src="public/img/biesy.svg">
+            <div>
+                <h2>title</h2>
+            </div>
+        </div>
+        </section>
+
         </div>
     </div>
 </body>
