--- a/public/views/login.html
+++ b/public/views/login.html
@@ -9,6 +9,10 @@
     <div class="container">
         <div class="login_container">
             <img src="public/img/logo.svg">
+            <div class="register_info">
+                <t>Nie masz jeszcze konta?</t>
+                <li><a href="register">Zarejestruj się!</a></li>
+            </div>
             <form class="login" action="login" method="POST">
                 <div class="messages">
                     <?php if(isset($messages)){
