--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ body {
 
 
 .login_container {
-    margin-top: 22%;
+    margin-top: 7%;
     height: 100%;
     width: fit-content;
     display: flex;
@@ -47,8 +47,17 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 40vh;
-    width: 40vw;
+    height: 20vh;
+    width: 25vw;
+}
+
+.register_info {
+    height: 5vh;
+    width: 20vw;
+    margin-top: 5vh;
+    text-align: center;
+    color: dodgerblue;
+    font-size: 2vh;
 }
 
 .login input {
