--- a/public/views/search.html
+++ b/public/views/search.html
@@ -25,30 +25,36 @@
             </ul>
         </nav>
 
+
+
         <div class="search_place">
             <input name="search" type="text" placeholder="Szukaj">
             <button class="button button1">Szukaj</button>
         </div>
 
-        <section class="projects">
+
+
+        <section class="spectacl_title">
             <div id="project-1">
-                <img src="public/img/biesy.svg">
+                <img src="public/img/spectacl1.svg">
                 <div>
                     <h2>title</h2>
                 </div>
             </div>
             <div id="project-2">
-                <img src="public/img/biesy.svg">
+                <img src="public/img/spectacl1.svg">
                 <div>
                     <h2>title</h2>
                 </div>
-            </div><div id="project-3">
-            <img src="public/img/biesy.svg">
+            </div>
+            <div id="project-3">
+            <img src="public/img/spectacl1.svg">
             <div>
                 <h2>title</h2>
             </div>
-        </div><div id="project-4">
-            <img src="public/img/biesy.svg">
+        </div>
+            <div id="project-4">
+            <img src="public/img/spectacl1.svg">
             <div>
                 <h2>title</h2>
             </div>
