--- a/public/css/style_backg.css
+++ b/public/css/style_backg.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: radial-gradient(circle, rgba(128,0,0,1) 20%, rgba(19,0,0,1) 60%);
+    background: radial-gradient(circle, rgba(128,0,0,1) 5%, rgba(19,0,0,1) 80%);
     height: 100vh;
     width: 100vw;
     overflow: hidden;
@@ -32,27 +32,69 @@ section {
     overflow: auto;
 }
 
-.projects>div>img {
-    height: 50%;
+.spectacl_title>div>img {
+    height: 100%;
     width: 100%;
     object-fit: cover;
-    border-radius: 1em 1em 0 0;
+    /*border-radius: 1em 1em 0 0;*/
 }
 
-.projects>div>div {
-    height: 50%;
+.spectacl_title>div>div {
+    align-content: center;
+    height: 7%;
     margin: 1em;
     color: #2699FB;
-    display: flex;
+    display: grid;
     flex-direction: column;
     justify-content: space-around;
 }
 
-.projects>div {
+.spectacl_title>div {
     border: 1px solid gray;
-    border-radius: 1em 1em 0 0;
-    height: 400px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.theatre_list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    grid-gap: 2em;
+    padding: 2em;
+    overflow: auto;
+}
+
+.theatre_list>dl {
+    align-content: center;
+    height: 7%;
+    margin: 1em;
+    color: #2699FB;
+    display: grid;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.theatre_list>dl>dt {
+    font-size: 2.5em;
+}
+.theatre_list>dl>dd {
+    font-size: 1.5em;
+}
+
+.search_theatre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15%;
+}
+.search_theatre>input {
+    height: 3em;
+    width: 20em;
+}
+
+.button_search {
+    background-color: dodgerblue;
+    font-size: 1em;
+    padding: 0.8em;
 }
