--- a/public/views/theatre.html
+++ b/public/views/theatre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="public/css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style_backg.css">
     <link rel="stylesheet" type="text/css" href="public/css/menu_style.css">
 
     <script src="https://kit.fontawesome.com/7186f6c2cc.js" crossorigin="anonymous"></script>
@@ -24,6 +24,43 @@
             <li><a href="http://localhost:8080/login">Zaloguj się</a></li>
         </ul>
     </nav>
+
+    <div class="search_theatre">
+        <input name="search" type="text" placeholder="Miasto">
+        <button class="button button_search">Szukaj</button>
+    </div>
+
+    <section class="theatre_list">
+        <dl>
+            <dt><a href="#">Teatr1</a></dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr2</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr3</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr4</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr5</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr6</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr7</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr1</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr1</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr1</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr1</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr1</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+            <dt>Teatr1</dt>
+            <dd>wjunfwinfewofniewnofonijhbugyvfctvghbnjimnihbugvyfbhunijbugvyfctvghbjnkhbgvcfvhbjnkhbgvfhbjnkin</dd>
+
+        </dl>
+    </section>
 
 </div>
 </body>
