--- a/public/css/style_backg.css
+++ b/public/css/style_backg.css
@@ -24,7 +24,7 @@ body {
     background-color: dodgerblue;
 
 }
-section {
+section.spectacl_title {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2em;
@@ -36,20 +36,21 @@ section {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    /*border-radius: 1em 1em 0 0;*/
 }
 
 .spectacl_title>div>div {
-    align-content: center;
-    height: 7%;
-    margin: 1em;
-    color: #2699FB;
+    position: absolute;
     display: grid;
-    flex-direction: column;
-    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+    margin: auto;
+    color: #fb8226;
+    align-content: center;
+    justify-content: center;
 }
 
 .spectacl_title>div {
+    position: relative;
     border: 1px solid gray;
     height: 550px;
     display: flex;
@@ -97,4 +98,8 @@ section {
     background-color: dodgerblue;
     font-size: 1em;
     padding: 0.8em;
+}
+
+::-webkit-scrollbar {
+    opacity: 0;
 }
