--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -49,7 +49,25 @@ form {
 }
 p {
     margin: 0;
-    color: dodgerblue;
+    color: #2699FB;
+}
+button {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    height: 3vh;
+    width: 3vh;
+    background: white;
+    border: 0.2em solid #2699FB;
+    border-radius: 0.7em;
+    font-size: 1.5vh;
+}
+
+button:hover {
+    transition-duration: 0.3s;
+    border-color: white;
+    background-color: #2699FB;
+    color:  white;
 }
 
 
