--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -15,7 +15,8 @@ body {
 }
 
 input {
-    padding: 0.5em 3em;
+    padding: 0.5em 1em;
+    width: 15em;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 0.2em solid #2699FB;
     border-radius: 2.5em;
@@ -68,6 +69,9 @@ button:hover {
     border-color: white;
     background-color: #2699FB;
     color:  white;
+}
+.card_number>input {
+    width: 100%;
 }
 
 
