--- a/public/css/style_backg.css
+++ b/public/css/style_backg.css
@@ -48,8 +48,11 @@ section.spectacl_title {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2em;
-    padding: 2em;
+    padding: 14em;
+    padding-top: 2em;
+    padding-bottom: 0;
     overflow: auto;
+    width: 70%;
 }
 
 .spectacl_title>div>img {
@@ -72,7 +75,7 @@ section.spectacl_title {
 .spectacl_title>div {
     position: relative;
     border: 1px solid gray;
-    height: 550px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -210,4 +213,28 @@ section.spectacl_title {
 
 .legenda>i>p {
 
+}
+
+@media only screen and (max-device-width: 420px){
+    .container1 {
+        flex-direction: column;
+        width: 130vw;
+        height: 130vh;
+    }
+
+    * {
+        font-size: 50px;
+    }
+
+    .login_container {
+        height: 3em;
+    }
+
+    .logo {
+        height: 28em;
+    }
+
+    .form {
+        margin: auto;
+    }
 }
