--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -29,7 +29,7 @@ li a {
   
 /* Change the link color to #111 (black) on hover */
 li a:hover {
-background-color: #111;
+color: darkorange;
 }
 
 .logo2 img {
