--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -94,6 +94,11 @@ button:hover {
     display: none;
     justify-items: center;
 }
-
+.spectacle-img {
+    height: 50vh;
+    width: 40vh;
+    object-fit: cover;
+    margin: 0.5em;
+}
 
 
