--- a/public/css/style_backg.css
+++ b/public/css/style_backg.css
@@ -46,6 +46,9 @@ body {
     justify-items: center;
     margin: 2vh;
 }
+.button-description {
+    color: blue;
+}
 
 .button-navigation {
     background: #2699FB;
@@ -53,11 +56,11 @@ body {
     width: 14%;
     height: 60%;
     margin: 1%;
-
 }
 
 .block-spectacle1 {
     display: none;
+    margin-bottom: 1em;
 }
 
 .block-spectacle2 {
@@ -71,14 +74,39 @@ body {
 
 .block-spectacle3 {
     display: none;
+    margin-bottom: 1em;
 }
 
 h10 {
-padding-block-start: 1em;
-font-size: 2em;
-font-weight: bold;
-color: gold;
-text-decoration: underline;
+    padding-block-start: 1em;
+    padding-block-end: 1em;
+    font-size: 2em;
+    font-weight: bold;
+    color: gold;
+    text-decoration: underline;
+}
+
+h11 {
+    font-size: 2.5em;
+    font-weight: bold;
+    color: white;
+}
+
+.actors-block {
+    display: grid;
+    overflow: auto;
+    margin-bottom: 1em;
+}
+
+.actors-block>ul {
+    display: contents;
+    font-size: 1.3em;
+    color: gold;
+}
+
+.actors-block>ul>li>p {
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
 
 /* END chosenSpectacle*/
@@ -158,6 +186,7 @@ section.spectacle_title {
     grid-gap: 2em;
     padding: 2em;
     overflow: auto;
+    margin-bottom: 1em;
 }
 
 .theatre_list>dl {
@@ -168,6 +197,13 @@ section.spectacle_title {
     display: grid;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.theatre_description {
+    display: grid;
+    background: cornflowerblue;
+    width: 60vw;
+    height: 10vh;
 }
 
 .theatre_list>dl>dt {
