--- a/public/css/menu_style.css
+++ b/public/css/menu_style.css
@@ -17,13 +17,12 @@ li {
 ul {
     margin: 0;
     height: 100%;
+    list-style-type: none;
 }
   
 li a {
-    display: block;
     color: white;
     text-align: center;
-    /*padding: 14px 16px;*/
     text-decoration: none;
 }
   
