--- a/public/css/register_style.css
+++ b/public/css/register_style.css
@@ -60,8 +60,8 @@ p {
 }
 button {
     display: grid;
-    align-items: center;
-    justify-items: center;
+    align-content: center;
+    justify-content: center;
     height: 3vh;
     width: 3vh;
     background: white;
